--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,69 +1,94 @@
-name: CI-Tests
-on:
-    pull_request:
-      branches:
-        - 'develop'
-      paths:
-        - 'code/**'
+# Continuous Integration Workflow for Coupon Acceptance Prediction System
+#
+# This workflow is triggered on pull requests to the 'develop' branch,
+# specifically when changes are made in the 'code/' directory.
+#
+# The workflow performs the following steps:
+# 1. Sets up Python 3.9
+# 2. Installs project dependencies
+# 3. Runs unit tests
+# 4. Performs linting
+# 5. Configures AWS credentials
+# 6. Runs Terraform plan to validate infrastructure changes
+#
+# Note: Integration tests are currently commented out. Uncomment and
+# configure as needed for your project.
+#
+# Ensure that AWS credentials are properly stored as secrets in your
+# GitHub repository settings.
 
+name: CI-Tests
+
+on:
+  pull_request:
+    branches:
+      - 'develop'
+    paths:
+      - 'code/**'
 
 env:
-    AWS_DEFAULT_REGION: 'eu-west-2'
-    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+  AWS_DEFAULT_REGION: 'eu-west-2'
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
-    test:
-      runs-on: ubuntu-latest
-      steps:
-          - uses: actions/checkout@v2       # github actions
-          - name: Set up Python 3.9
-            uses: actions/setup-python@v2
-            with:
-              python-version: 3.9   
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
 
-          - name: Install dependencies
-            working-directory: "code"
-            run: pip install pipenv && pipenv install --dev
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-          - name: Run Unit tests
-            working-directory: "code"
-            run: pipenv run pytest tests/
-    
-          - name: Lint
-            working-directory: "code"
-            run: pipenv run pylint --recursive=y .
+      - name: Install dependencies
+        working-directory: "code"
+        run: |
+          pip install pipenv
+          pipenv install --dev
 
-          - name: Configure AWS Credentials
-            uses: aws-actions/configure-aws-credentials@v1
-            with:
-              aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-              aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-              aws-region: ${{ env.AWS_DEFAULT_REGION }}
+      - name: Run Unit tests
+        working-directory: "code"
+        run: pipenv run pytest tests/
 
-          #- name: Integration Test
-          #  working-directory: 'code/integraton-test'
-          #  run: |
-          #    . run.sh
+      - name: Lint
+        working-directory: "code"
+        run: pipenv run pylint --recursive=y .
 
-    tf-plan:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Configure AWS Credentials
-          uses: aws-actions/configure-aws-credentials@v1
-          with:
-            aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ env.AWS_DEFAULT_REGION }}
-  
-        - uses: hashicorp/setup-terraform@v2
-        
-        # reconfigure key without modifying the existing code
-        - name: TF plan
-          id: plan
-          working-directory: 'code/infrastructure'
-          run: |
-            terraform init -backend-config="key=mlops-zoomcamp-prod.tfstate" --reconfigure && terraform plan --var-file vars/prod.tfvars
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
 
+      # Uncomment and configure integration tests as needed
+      # - name: Integration Test
+      #   working-directory: 'code/integration-test'
+      #   run: |
+      #     . run.sh
+
+  tf-plan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Plan
+        id: plan
+        working-directory: 'code/infrastructure'
+        run: |
+          terraform init -backend-config="key=mlops-zoomcamp-prod.tfstate" -reconfigure
+          terraform plan -var-file=vars/prod.tfvars
