--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,57 @@
+# Pre-commit configuration file
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.2.0
-  hooks:
-    - id: check-yaml
-    - id: check-added-large-files
-    - id: detect-private-key
-    - id: detect-aws-credentials
-- repo: https://github.com/pycqa/isort
-  rev: 5.12.0
-  hooks:
-    - id: isort
-      name: isort (python)
-- repo: https://github.com/psf/black
-  rev: 23.7.0
-  hooks:
-    - id: black
-      language_version: python3.10
-- repo: local
-  hooks:
-    - id: pylint
-      name: pylint
-      entry: pylint
-      language: system
-      types: [python]
-      args: [
-        "-rn", # Only display messages
-        "-sn", # Don't display the score
-        "--recursive=y"
-      ]
-#- repo: local
-#  hooks:
-#    - id: pytest-check
-#      name: pytest-check
-#      entry: pytest
-#      language: system
-#      pass_filenames: false
-#      always_run: true
-#      args: [
-#        "code/tests/"
-#      ]
+  # Pre-commit hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
+      - id: check-yaml
+        name: Check YAML
+      - id: check-added-large-files
+        name: Check for added large files
+      - id: detect-private-key
+        name: Detect private keys
+      - id: detect-aws-credentials
+        name: Detect AWS credentials
+
+  # Python import sorter
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        name: isort (Python)
+
+  # Python code formatter
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+      - id: black
+        name: Black (Python formatter)
+        language_version: python3.10
+
+  # Local hooks
+  - repo: local
+    hooks:
+      - id: pylint
+        name: Pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args:
+          - "-rn"  # Only display messages
+          - "-sn"  # Don't display the score
+          - "--recursive=y"
+
+  # Pytest checks (commented out)
+  # - repo: local
+  #   hooks:
+  #     - id: pytest-check
+  #       name: Pytest
+  #       entry: pytest
+  #       language: system
+  #       pass_filenames: false
+  #       always_run: true
+  #       args:
+  #         - "code/tests/"
