--- a/prefect.yaml
+++ b/prefect.yaml
@@ -1,18 +1,21 @@
 # File for configuring project / deployment build, push and pull steps
 
 # Generic metadata about this project
-name: dtc_mlops_project
-prefect-version: 2.10.8
+name: dtc_mlops_project  # The name of your Prefect project
+prefect-version: 2.10.8  # The version of Prefect this project is compatible with
 
 # build section allows you to manage and build docker images
+# Currently not configured
 build: null
 
 # push section allows you to manage if and how this project is uploaded to remote locations
+# Currently not configured
 push: null
 
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
-- prefect.projects.steps.git_clone_project:
-    repository: https://github.com/ChungWasawat/dtc_mlops_project.git
-    branch: develop
-    access_token: null
+  # Use the git_clone_project step to clone the project repository
+  - prefect.projects.steps.git_clone_project:
+      repository: https://github.com/ChungWasawat/dtc_mlops_project.git  # The GitHub repository URL
+      branch: develop  # The branch to clone (in this case, 'develop')
+      access_token: null  # No access token provided, assumes public repository
